[package]
name = "dreamberd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
lazy-regex = "2.5.0"
rustyline = "14.0.0"
dialoguer = "0.11.0"

[profile.release]
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.
lto = true